--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <h3>Tesla</h3>
   </div>
 </div>
-<script src="/5 steps/01-cards-sources/js/app.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
